--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -10,9 +10,22 @@ h1{
 margin-top:0px;
 }
 
+button{
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 15px;
+
+}
+
 /*home page styles */
     .notquiz{
-        background-image: url('../img/background.png');
+        background: #79ADDC;
         background-size:100% 100%;
     }
 /*in home.html and quiz_buttons.js*/
@@ -54,15 +67,19 @@ margin-top:0px;
 
 /*select_from_search style*/
     .table_row{
-        padding:0px;
-        margin:0px;
+        padding:0;
+        margin:0;
         height:20%;
         width:100%
     }
+    .table_row > * {
+            margin:0 2.5%;
+        }
+
     img{
         float: left;
         height:100%;
-        width: auto
+        width: auto;
         padding:0px;
         margin:0px;
     }
@@ -71,20 +88,21 @@ margin-top:0px;
     .quiz_td{
         width:50%;
         text-align: center;
-        color:red;
         padding:0px;
         margin:0px;
+
     }
     .answer_button{
         background-color: #4CAF50;
         border: none;
-        color: white;
+        color: black;
         text-decoration: none;
         text-align: center;
         padding:0px;
         margin:0px;
         width:100%;
         height:100%;
+        border-radius:0%;
     }
 
     #quiz_table{
@@ -94,6 +112,14 @@ margin-top:0px;
         margin:0px;
         border-spacing:0px;
     }
+
+    #button_1{
+        background-color: #79ADDC;
+    }
+    #button_2{
+        background-color: #79ADDC;
+    }
+
 
     #container {
         padding:0px;
@@ -106,7 +132,7 @@ margin-top:0px;
     #animate {
       width: 100%;
       height: 100%;
-      background-color: red;
+      background-color: #FE5F55;
     }
 
     #score_box {
